--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <body>
 <table cellspacing = 30>
     <tr>
-    <td><img src="../4.3 HTML Porfolio Project/assets/images/office.jpg" alt="Profile Picture"style="width:250px;height:300px;"></td>
+    <td><img src="../assets/images/office.jpg" alt="Profile Picture"style="width:250px;height:300px;"></td>
     <td><H1>Swarnita Choudhary</H1>
     <p><h3>Python Full stack Developer</h3></p>
     <p>Makeup enthusiant</p>
@@ -98,7 +98,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <center><h5><em>Whatever you do , do it with all your heart and soul.You are your own savior </em></h5></center>
 
-<a href="../4.3 HTML Porfolio Project/public/Goals2023.html">Goals for 2023</a>
-<a href="../4.3 HTML Porfolio Project/public/Makeup.html">Hobbies</a>
+<a href="../public/Goals2023.html">Goals for 2023</a>
+<a href="../public/Makeup.html">Hobbies</a>
 
 </body>
