--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <br>
 
-<a href= "../public/Contact.html">Link to Contact Information </a>
+<a href= "../public/Contact.html#L2">Link to Contact Information </a>
  <!-- also add youe github profile to it-->   
 
 
