--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <br>
 
-<a href= "./public/Contact.html">Link to Contact Information </a>
+<a href="../public/Contact.html">Link to Contact Information</a>
  <!-- also add youe github profile to it-->   
 
 
@@ -98,7 +98,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <center><h5><em>Whatever you do , do it with all your heart and soul.You are your own savior </em></h5></center>
 
-<a href= "../public/Goals2023.html">Goals for 2023</a>
-<a href= "../public/Makeup.html">Hobbies</a>
+<a href= "../public/Goals2023.html"> Goals for 2023</a>
+<a href= "../public/Makeup.html"> Hobbies</a>
 
 </body>
