--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <body>
 <table cellspacing = 30>
     <tr>
-    <td><img src= "../assets/images/office.jpg" alt="Profile Picture"style="width:250px;height:300px;"></td>
+    <td><img src= "./assets/images/office.jpg" alt="Profile Picture"style="width:250px;height:300px;"></td>
     <td><H1>Swarnita Choudhary</H1>
     <p><h3>Python Full stack Developer</h3></p>
     <p>Makeup enthusiant</p>
